# cyphal-device-library

./: .envrc  .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  pyproject.toml
.github/workflows/: hotfix.yml  pr-changelog-update.yml  prerelease-tag.yml  release.yml  test.yml
scripts/: release.py
src/cyphal_device_library/: __init__.py  client.py  device.py  device_client.py  logging.py  publication_watch.py  publications.py  registry.py  update.py  util.py
src/cyphal_device_library/cli/: __init__.py  _util.py  discover.py  dsdl.py  execute.py  registry.py  status.py  update.py  version.py
src/cyphal_device_library/emulation/: __init__.py  base.py  can_media.py  factory.py  host.py  local_registry.py  node.py  publication_helpers.py  publication_spec.py
src/cyphal_device_library/mmb/: client.py  self_test.py
src/cyphal_device_library/util/: __init__.py  _logging.py  dsdl.py  logging.py  message_serialize.py  message_types.py  questions.py  repositories.toml
tests/: test_device.py  test_emulation.py  test_emulation_host.py  test_emulation_node_services.py  test_emulation_publication.py  test_message_serialize.py  test_message_types.py  test_publication_watch.py  test_publications.py  test_registry_json.py
tests/cli/: test_util.py
