[project]
name = "cyphal-device-library"
version = "0.3.1"
description = "Library to simplify Interaction with Cyphal Devices"
readme = "README.md"
authors = [
    { name = "Lasse Fröhner", email = "lasse@starcopter.com" }
]
requires-python = ">=3.13"
dependencies = [
    "pycyphal[transport-can-pythoncan]>=1.23.0",
    "python-can-usbtingo>=1.0.2",
    "python-dotenv>=1.1.0",
    "rich>=13.0.0",
    "typer>=0.16.0",
]

[project.scripts]
cyphal = "cyphal_device_library.cli:app"

[dependency-groups]
dev = [
    "bump-my-version>=1.2.0",
    "pre-commit>=4.2.0",
    "ruff>=0.11.12",
    "yakut>=0.14.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
extend-select = ["I"]

[tool.bumpversion]
current_version = "0.3.1"
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
serialize = ["{major}.{minor}.{patch}"]
search = "{current_version}"
replace = "{new_version}"
regex = false
ignore_missing_version = false
ignore_missing_files = false
tag = true
sign_tags = false
tag_name = "v{new_version}"
tag_message = "🔖 Bump version: {current_version} → {new_version}"
allow_dirty = false
commit = true
message = "🔖 Bump version: {current_version} → {new_version}"
moveable_tags = [
    "latest",
    "v{new_major}.{new_minor}",
    "v{new_major}"
]
commit_args = ""
setup_hooks = []
pre_commit_hooks = [
    "uv lock --upgrade-package cyphal-device-library",
    "git add uv.lock",
]
post_commit_hooks = []
