[project]
name = "cyphal-device-library"
version = "0.6.12"
description = "Library to simplify Interaction with Cyphal Devices"
readme = "README.md"
authors = [
    { name = "Lasse Fröhner", email = "lasse@starcopter.com" }
]
requires-python = ">=3.14"
dependencies = [
    "pycyphal[transport-can-pythoncan]>=1.24.5",
    "python-can-usbtingo>=1.0.2",
    "python-dotenv>=1.1.0",
    "python-can[pcan]",
    "rich>=13.0.0",
    "typer>=0.16.0",
    "questionary",
]

[project.scripts]
cyphal = "cyphal_device_library.cli:run"

[dependency-groups]
dev = [
    "bump-my-version>=1.2.0",
    "pre-commit>=4.2.0",
    "yakut>=0.14.0",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "pytest-cov>=6.2.1",
    "pytest-dependency>=0.6.0",
    "pytest-rerunfailures>=16.1",
    "pytest-xdist[psutil]>=3.8.0",
    "ruff>=0.12.7",
    "ty>=0.0.1a16",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
extend-select = ["I"]

[tool.typos.default]
locale = "en-us"
check-filename = true
check-file = true
extend-ignore-identifiers-re = [
    "PnP"  # Plug and Play
]

[tool.ty.src]
include = [
    "src",
    "tests",
]

[tool.ty.rules]
invalid-assignment = "ignore"       # allow implicit shadowing in tests to mock methods

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.coverage.run]
relative_files = true
omit = [
    "__main__.py",
    "tests/**",
]
